Changed titles to TradeOff

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="./img/apple-icon.png" />
     <link rel="icon" type="image/png" href="./img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>StockGame</title>
+    <title>TradeOff</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <!-- Bootstrap core CSS     -->
@@ -48,7 +48,7 @@
     -->
             <div class="logo">
                 <a href="" class="simple-text">
-                    Trade Off
+                    TradeOff
                 </a>
             </div>
             <div class="sidebar-wrapper">
@@ -321,7 +321,7 @@
                             </div>
                             <div class="modal-body">
                             <font size="2">
-                                <p><b>Welcome to the Stock Market Game!</b></p>
+                                <p><b>Welcome to TradeOff!</b></p>
 
 								<p><b>-</b> The purpose of this game is to help you learn about investing and the world of stocks. Our goal is to help get students get interested in investing by providing people who participate with an opportunity to explore investing in an environment with no risk, because it is entirely simulated. There are plenty of options you can use to practice and continue to learn, wih our simulated buying and selling. You'll even be able to view how your friends are doing on a leaderboard, and achievements will help you gauge your progress and give you milestones to aim for.</p>
 
