--- a/client/public/user.html
+++ b/client/public/user.html
@@ -163,10 +163,21 @@
           <div class="row">
             <div class="card card-stats" id="whatif">
               <div class="card-header" data-background-color="orange">
-                <i class="fa fa-coffee"></i>
+                <i class="fa fa-gift"></i>
               </div>
               <div class="card-content">
-                <h3 class="title">With the money you made, you could buy <span class='coffee'>11,415</span> coffees!</h3>
+                <h3 class="title">With the money you made, you could buy:</h3>
+                <ul class="whatif">
+                  <li><h4>
+                    <span class='coffee'>11,415</span> coffees! <i class="fa fa-coffee"></i></h4>
+                  </li>
+                  <li><h4>
+                    <span class='gum'>11,415</span> packs of gum! <i class="fa fa-eraser"></i></h4>
+                  </li>
+                  <li><h4>
+                    <span class='vgames'>11,415</span> video games! <i class="fa fa-twitch"></i></h4>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
