--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="./img/apple-icon.png" />
     <link rel="icon" type="image/png" href="./img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Trade Off</title>
+    <title>TradeOff - Dashboard</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <!-- Bootstrap core CSS     -->
@@ -48,7 +48,7 @@
     -->
             <div class="logo">
                 <a href="" class="simple-text">
-                    TradeOff
+                    TRADEOFF
                 </a>
             </div>
             <div class="sidebar-wrapper">
