Urls open new tabs

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -331,10 +331,10 @@
 
 								<p><b>-</b> If you find that you enjoy investing and wish to pursue it in a real scenario, here a few links to resources that can help get you started.</p>
 						    </font>
-								<a href="https://www.robinhood.com/"> Robinhood Free Stock Trading</a><br />
-								<a href="https://investor.vanguard.com/corporate-portal/"> Vanguard Investment</a><br />
-							    <a href="https://finance.yahoo.com/"> Yahoo Finance</a><br />
-							    <a href="http://www.investopedia.com/"> Investopedia</a> </p>
+								<a href="https://www.robinhood.com/" target="_blank"> Robinhood Free Stock Trading</a><br />
+								<a href="https://investor.vanguard.com/corporate-portal/" target="_blank"> Vanguard Investment</a><br />
+							    <a href="https://finance.yahoo.com/" target="_blank"> Yahoo Finance</a><br />
+							    <a href="http://www.investopedia.com/" target="_blank"> Investopedia</a> </p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-primary" data-dismiss="modal">Let's Get Started!</button>
