Small fixes again

--- a/client/public/buy.html
+++ b/client/public/buy.html
@@ -131,7 +131,7 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <td class="ticker">APPL</td>
+                          <td class="ticker">AAPL</td>
                           <td class="price">172.50</td>
                           <td class="max">15</td>
                           <td>
